First design mk 2: Fixing mobile layout issues

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -65,14 +65,6 @@ nav ul li {
     padding: 3px 3px;
   }
 
-  .videoWrapper {
-	    position: relative;
-	    padding-bottom: 56.25%; /* 16:9 */
-	    padding-top: 25px;
-	    height: 0;
-      top: 50%;
-      transform: translateY(-5%);
-  }
 }
 #intro {
   padding: 210px 0 100px 0;
@@ -82,14 +74,6 @@ nav ul li {
     display: none;
   }
 
-  .videoWrapper {
-	    position: relative;
-	    padding-bottom: 56.25%; /* 16:9 */
-	    padding-top: 25px;
-	    height: 0;
-      top: 50%;
-      transform: translateY(-5%);
-  }
 }
 @media only screen and (min-width: 960px) {
   .appear {
